# visual_marker_mapping

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  _clang-format  dependencies.txt  visualize_reconstruction.py
cameraSurveyingWithAprilTags/: CMakeLists.txt
cameraSurveyingWithAprilTags/include/cameraSurveyingWithAprilTags/: Camera.h  CameraModel.h  DetectionIO.h  ReconstructionIO.h  TagDetector.h  TagReconstructor.h  cameraUtilities.h  eigenCVConversions.h  fileUtilities.h  propertyTreeUtilities.h  tagReconstructionCostFunction.h
cameraSurveyingWithAprilTags/src/: CameraModel.cpp  DetectionIO.cpp  ReconstructionIO.cpp  TagDetector.cpp  TagReconstructor.cpp  cameraUtilities.cpp  eigenCVConversions.cpp  fileUtilities.cpp  main.cpp  propertyTreeUtilities.cpp
cmake/Modules/: FindAkaze.cmake
include/visual_marker_mapping/: DetectionResults.h  EigenCVConversions.h  FileUtilities.h  PropertyTreeUtilities.h  TagDetector_MIT.h  TagReconstructor.h
src/: CameraModel.cpp  CameraUtilities.cpp  ReconstructionIO.cpp  TagDetector.cpp  TagDetector_MIT.cpp  TagDetector_Umich.cpp  TagReconstructor.cpp  main_detection.cpp  main_mapping.cpp
visual_marker_mapping/: CMakeLists.txt
visual_marker_mapping/include/visual_marker_mapping/: Camera.h  CameraModel.h  CameraUtilities.h  DetectionIO.h  FileUtilities.h  ReconstructionIO.h  TagDetector.h  TagDetector_MIT.h  TagDetector_Umich.h  TagReconstructor.h  cameraUtilities.h  eigenCVConversions.h  fileUtilities.h  propertyTreeUtilities.h  tagReconstructionCostFunction.h
visual_marker_mapping/src/: CameraModel.cpp  CameraUtilities.cpp  DetectionIO.cpp  EigenCVConversions.cpp  FileUtilities.cpp  PropertyTreeUtilities.cpp  ReconstructionIO.cpp  TagDetector.cpp  TagDetector_MIT.cpp  TagDetector_Umich.cpp  TagReconstructor.cpp  cameraUtilities.cpp  eigenCVConversions.cpp  fileUtilities.cpp  main.cpp  main_detection.cpp  main_mapping.cpp  propertyTreeUtilities.cpp
